--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipt Pocket | Home</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/larger.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="./js/main.js"></script>
   </head>
@@ -14,16 +15,17 @@
     <main class="divider">
       <div class="hero-image">
         <div class="hero-text">
-          <!-- <h1 style="font-size:50px">Brighten Your Day With A GOOD MEAL</h1>
-          <p>And I'm a Photographer</p>
-          <button>Hire me</button> -->
-          </div>
+          <h1>Brighten Your Day </br>From a Good Recipe</h1>
+          <p>Recipe Pocket</p>
+        </div>
       </div>
       <section class="search">
         <div class="search-container">
-          <input id="search-input" placeholder="Type Food For Your Recipe...">
+          <input id="search-input" placeholder="Let's Search...">
           <button id="search-btn"><i class="fa fa-search"></i></button>
         </div>
+      </section>
+      <section class="recipe-list">
       </section>
     </main>
     <footer></footer>
