--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,22 @@
           <p>Recipe Pocket</p>
         </div>
       </div>
-      <section class="search">
+      <section class="search-bar">
         <div class="search-container">
           <input id="search-input" placeholder="Let's Search...">
           <button id="search-btn"><i class="fa fa-search"></i></button>
         </div>
       </section>
-      <section class="recipe-list">
+      <section class="page-ref">
+        <div>Total Data:<span class="total-data"></span></div>
+        <div>Page:<span class="current-page"></span></div>
+        <div>
+          <button class="prev-page-btn">Prev</button>
+          <button class="next-page-btn">Next</button>
+        </div>
+        
+      </section>
+      <section class="search-recipe-list">
       </section>
     </main>
     <footer></footer>
