--- a/src/list/index.html
+++ b/src/list/index.html
@@ -16,7 +16,7 @@
       <section class="lists">
         <h2>My List</h2>
 
-        <ul class="recipe-list"></ul>
+        <ul class="collect-recipe-list"></ul>
       </section>
     </main>
 
