--- a/src/list/index.html
+++ b/src/list/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipt Pocket | Recipe Detail</title>
     <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/medium.css" />
     <link rel="stylesheet" href="/css/larger.css" />
     <script type="module" src="../js/list.js"></script>
   </head>
