--- a/src/list/index.html
+++ b/src/list/index.html
@@ -17,7 +17,7 @@
       <section class="lists">
         <h2>My List</h2>
 
-        <ul class="collect-recipe-list"></ul>
+        <div class="collect-recipe-list"></udiv>
       </section>
     </main>
 
