--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipt Pocket | Home</title>
     <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/medium.css" />
     <link rel="stylesheet" href="/css/larger.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="./js/main.js"></script>
@@ -19,23 +20,17 @@
           <p>Recipe Pocket</p>
         </div>
       </div>
+      
       <section class="search-bar">
         <div class="search-container">
           <input id="search-input" placeholder="Let's Search...">
           <button id="search-btn"><i class="fa fa-search"></i></button>
         </div>
       </section>
-      <section class="page-ref">
-        <div>Total Data:<span class="total-data"></span></div>
-        <div>Page:<span class="current-page"></span></div>
-        <div>
-          <button class="prev-page-btn">Prev</button>
-          <button class="next-page-btn">Next</button>
-        </div>
-        
-      </section>
-      <section class="search-recipe-list">
-      </section>
+
+      <section class="page-ref"></section>
+
+      <section class="search-recipe-list"></section>
     </main>
     <footer></footer>
   </body>
