--- a/src/list/index.html
+++ b/src/list/index.html
@@ -4,10 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipt Pocket | Recipe Detail</title>
+    <title>Recipt Pocket | Collect List</title>
     <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="/css/medium.css" />
     <link rel="stylesheet" href="/css/larger.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="../js/list.js"></script>
   </head>
   <body>
