--- a/src/recipe_page/index.html
+++ b/src/recipe_page/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipt Pocket | Recipe Detail</title>
     <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/medium.css" />
     <link rel="stylesheet" href="/css/larger.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="../js/recipeCard.js"></script>
   </head>
   <body>
